Dynamically showing category

--- a/blog.html
+++ b/blog.html
@@ -33,13 +33,22 @@
 <body>
 
     <main>
-        <div class="container mx-auto my-20">
+        <div class="container mx-4  lg:mx-auto my-20">
             <ul class=" flex flex-col gap-10 text-lg font-bold">
                 <li>1. The scope of a var variable is functional scope. The scope of a let variable is block scope. The scope of a const variable is block scope. It can be updated and re-declared into the scope.</li>
                 <li>2. Undefined means the variable has been declared, but its value has not been assigned. Null means an empty value or a blank value. The typeof() operator returns undefined for an undefined variable. The typeof() operator returns the type as an object for a variable whose value is assigned as null.</li>
                 <li>3. A RESTful API is an architectural style for an application program interface (API) that uses HTTP requests to access and use data. That data can be used to GET, PUT, POST and DELETE data types, which refers to the reading, updating, creating and deleting of operations concerning resources.</li>
             </ul>
         </div>
+
+       <!-- <div class="relative border-2 w-[312px]">
+        <figure><img class="w-[400px] h-[200px] rounded-md" src="${item.thumbnail}" alt="Shoes" /></figure>
+        <div class="border-none rounded-md bg-[#171717] absolute px-2 py-1 right-2 bottom-4">
+            <p class="text-[#FFFFFF]  text-xs font-normal">3hrs 56 min ago</p>
+        </div>
+       </div> -->
+       
+
     </main>
     
 </body>
