--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
       rel="stylesheet"
     />
 
+    <!-- Icon  -->
+    <script src="https://kit.fontawesome.com/4edc683ffb.js" crossorigin="anonymous"></script>
+
+
     <!-- CSS File  -->
     <link rel="stylesheet" href="style.css">
 
@@ -41,7 +45,7 @@
 
         <!-- Buttons starts  -->
         <div>
-          <button class="btn btn-primary bg-gray-200 text-black border-none my-10 md:my-2">
+          <button onclick="sort()" class="btn btn-primary bg-gray-200 text-black border-none my-10 md:my-2">
             Sort by view
           </button>
         </div>
@@ -67,6 +71,32 @@
         </div>
         <!-- Button Section End -->
 
+
+
+        <!-- Cards Section starts -->
+        <div id="cards-container" class="mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 lg:gap-8">
+
+            <!-- Card 1
+            <div class="card card-compact w-96 bg-base-100 shadow-xl">
+                <figure><img class="w-[312px] h-[200px]" src="Icon.png" alt="Shoes" /></figure>
+                <div class="card-body">
+                  <div class="flex gap-4 ">
+                    <img class="w-[40px] h-[40px] rounded-full" src="" alt="">
+                    <h2 class=" text-base font-bold ">Building a Winning UX Strategy Using the Kano Model</h2>
+                  </div>
+                  <div class="flex gap-4 ml-4">
+                    <h4 class="text-sm font-normal text-gray-400">Awlad Hossain</h4>
+                    <img class="w-[20px] h-[20px]" src="verified.png" alt="">
+                  </div>
+                  <div class="ml-4 text-sm font-normal text-gray-400">
+                    <p>91K views</p>
+                  </div>
+                 
+                </div>
+              </div> -->
+
+        </div>
+        <!-- Cards Section end -->
 
     </main>
 
